--- a/blogposts.css
+++ b/blogposts.css
@@ -148,8 +148,8 @@ A.menubar:hover {color: #74AFAD;
   border-width: 15px;
   color:#000000;
   position: relative;
-  width:40%;
-  left:22%;
+  width:500px;
+left:18%;
   text-align:left;
   padding-top: 15px;
   padding-left:150px;
