--- a/contact.css
+++ b/contact.css
@@ -37,7 +37,7 @@
   border-color:#000000;
   text-align:center;
   position: absolute;
-  bottom: 1%;
+  bottom: 30%;
   left:28%;
 }
 
@@ -150,8 +150,7 @@ A.menubar:hover {color: #74AFAD;
   color:#000000;
   width:40%;
   position:relative;
-  left:20%;
-  margin-left: 0px;
+  left:15%;
   text-align:left;
   padding-top:30px;
   padding-left:15%;
@@ -166,7 +165,7 @@ A.menubar:hover {color: #74AFAD;
     text-align:center;
     font-size: 25px;
     position:relative;
-    right:21%;
+    right:30%;
   }
 
   #quote {
@@ -205,14 +204,13 @@ h5{
   padding-left:50px;
   padding-top:20px;
   border-style: solid;
-  border-color:#000000;
+  border-color:#74AFAD;
   width:70%;
   top:35%;
   font-size:35px;
   text-align: center;
-  background-color:#74AFAD;
+  background-color:#ECECEA;
   font-family:Palatino Linotype;
-  color:#ECECEA;
   border-radius:60px;
   position:absolute;
   right:200px;
@@ -223,7 +221,7 @@ h5{
 
 #photo {
   border-style:solid;
-  border-color:#000000;
+  border-color:#74AFAD;
   float:left;
   margin: 10px;
   width:300px;
@@ -231,51 +229,7 @@ h5{
   margin-right: 30px;
   top: 32%;
   text-align: center;
-  background-color:#74AFAD;
+  background-color:#ECECEA;
   font-family:Palatino Linotype;
 
-}
-
-ul
-{
-  font-family:Trebuchet MS;
-  font-size:20px;
-  text-align:left;
-  line-height: 150%;
-  text-align: justify;
-  }
-
-#section1
-{
-width:40%;
-height:400px;
-float:left;
-margin-bottom: 50px;
-border-radius: 20px;
-  border-style: solid;
-  border-color:#558C89;
-  background-color: #ffffff;
-padding-right: 40px;
-}
-
-#section2
-{
-width:40%;
-height:400px;
-float:right;
-margin-bottom: 50px;
-border-radius: 20px;
-  border-style: solid;
-  border-color:#558C89;
-  background-color: #ffffff;
-  padding-right: 40px;
-}
-
-h5 {
-  clear: both;
-}
-
-img{
-  border-style: solid;
-  border-color:#558C89;
 }
