--- a/blogposts.css
+++ b/blogposts.css
@@ -24,7 +24,6 @@
   padding: 25px;
 }
 
-
 #icons {
  width: 600px;
   height: 70px;
@@ -37,7 +36,7 @@
   border-color:#000000;
   text-align:center;
   position: absolute;
-  bottom: 1%;
+  bottom: 30%;
   left:28%;
 }
 
@@ -103,7 +102,7 @@ p {
 body {
     background-image: url('Logo.png');
     background-repeat: no-repeat;
-    background-attachment: static;
+    background-attachment: absolute;
     }
 
 .line_break{
