--- a/index.css
+++ b/index.css
@@ -25,7 +25,32 @@
 }
 
 
+#icons {
+ width: 600px;
+  height: 70px;
+  font-size: 20px;
+  font-family: Trebuchet MS;
+  font-weight: bold;
+  background-color: #558C89;
+  border-radius: 10px;
+  border-style: solid;
+  border-color:#000000;
+  text-align:center;
+  position: absolute;
+  bottom: 1%;
+  left:28%;
+}
 
+
+#icons ul {
+  height: auto;
+  padding: 12px 8px 8px 8px;
+  margin: 2px;
+}
+#icons li {
+  display: inline;
+  padding: 25px;
+}
 
 a {
     color: #558C89;
@@ -46,8 +71,6 @@ a:hover
   font-size:50px;
   text-align:center;
   color:#558C89;
-
-
 
 }
 
@@ -72,10 +95,9 @@ a:hover
 
 p {
   font-family:Trebuchet MS;
-  font-size:30px;
+  font-size:20px;
   text-align:center;
   line-height: 150%;
-  color: #000000;
   }
 
 body {
@@ -92,6 +114,23 @@ body {
   position:absolute;
 }
 
+#blogs{
+  padding-right:50px;
+  padding-left:50px;
+  border-style: solid;
+  border-radius:60px;
+  border-color:#000000;
+  position:relative;
+  width:70%;
+  right:15%;
+  left:11%;
+  top: 32%;
+  font-size: 35px;
+  text-align: center;
+list-style-position:inside;
+  background-color:#ECECEA;
+  font-family:Palatino Linotype;
+  }
 
   #blogs ol{
   text-align:center;
@@ -103,8 +142,58 @@ A.menubar:hover {color: #74AFAD;
 }
 
 
+#thinking_style{
+  border-style: solid;
+  border-color:#74AFAD;
+  border-radius:60px;
+  border-width: 15px;
+  color:#000000;
+  width:40%;
+  position:relative;
+  left:15%;
+  text-align:left;
+  padding-top:30px;
+  padding-left:15%;
+  top: 32%;
+  font-size: 20px;
+  list-style-position:inside;
+  background-color:#FFFFFF;
+  font-family:Palatino Linotype;
+  }
 
+  #title{
+    text-align:center;
+    font-size: 25px;
+    position:relative;
+    right:30%;
+  }
 
+  #quote {
+  background: #558C89;
+  border-left: 20px solid #C0C0C0;
+  margin: 1em 5px;
+  padding: 0.1em 0.1px;
+  quotes: "\201C""\201D""\2018""\2019";
+  text-align: center;
+  font-size:30px;
+  color:#FFFFFF;
+}
+blockquote:before {
+  color: #C0C0C0;
+  content: open-quote;
+  font-size: 3em;
+  line-height: 0.1em;
+  margin-right: 0.10em;
+  vertical-align: -0.4em;
+}
+blockquote:after {
+  color: #C0C0C0;
+  content: close-quote;
+  font-size: 3em;
+  line-height: 0.1em;
+  margin-right: 0.10em;
+  vertical-align: -0.4em;
+}
 
 h5{
   margin:0;
@@ -115,14 +204,13 @@ h5{
   padding-left:50px;
   padding-top:20px;
   border-style: solid;
-  border-color:#000000;
+  border-color:#74AFAD;
   width:70%;
   top:35%;
   font-size:35px;
   text-align: center;
   background-color:#ECECEA;
   font-family:Palatino Linotype;
-  color:#000000;
   border-radius:60px;
   position:absolute;
   right:200px;
@@ -133,14 +221,15 @@ h5{
 
 #photo {
   border-style:solid;
-  border-color:#000000;
+  border-color:#74AFAD;
   float:left;
+  margin: 10px;
   width:300px;
   height:355px;
   margin-right: 30px;
   top: 32%;
   text-align: center;
-  background-color:#74AFAD;
+  background-color:#ECECEA;
   font-family:Palatino Linotype;
 
 }
