--- a/index.css
+++ b/index.css
@@ -109,7 +109,7 @@ body {
 .line_break{
   height:4px;
   width:100%;
-  background-color:#74AFAD;
+  background-color:#D9853B;
   top:20%;
   position:absolute;
 }
