--- a/aboutme.css
+++ b/aboutme.css
@@ -24,7 +24,12 @@
   padding: 25px;
 }
 
-
+#Logo{
+margin-top:175px;
+position: absolute;
+left:15%;
+right:25%;
+}
 
 
 a {
@@ -72,7 +77,7 @@ a:hover
 
 p {
   font-family:Trebuchet MS;
-  font-size:30px;
+  font-size:25px;
   text-align:center;
   line-height: 150%;
   color: #000000;
@@ -87,7 +92,7 @@ body {
 .line_break{
   height:4px;
   width:100%;
-  background-color:#74AFAD;
+  background-color:#D9853B;
   top:20%;
   position:absolute;
 }
@@ -115,12 +120,12 @@ h5{
   padding-left:50px;
   padding-top:20px;
   border-style: solid;
-  border-color:#000000;
+  border-color:#558C89;
   width:70%;
-  top:35%;
+  top:85%;
   font-size:35px;
   text-align: center;
-  background-color:#ECECEA;
+  /*background-color:#ECECEA;*/
   font-family:Palatino Linotype;
   color:#000000;
   border-radius:60px;
@@ -128,6 +133,7 @@ h5{
   right:200px;
   line-height: 150%;
   margin-bottom:20px;
+  border-width: 5px;
 }
 
 
