--- a/aboutme.css
+++ b/aboutme.css
@@ -1,7 +1,8 @@
 #menu {
-  width: 920px;
-  height: 70px;
-  font-size: 20px;
+  max-width: 80%;
+  width: auto;
+  height: auto;
+  font-size: 18px;
   font-family: Trebuchet MS;
   font-weight: bold;
   background-color: #558C89;
@@ -11,24 +12,37 @@
   text-align:center;
   position: absolute;
   right: 1%;
-  top: 5%;
+  top: 3%;
 }
 
 
 #menu ul {
   height: auto;
-  padding: 5px 8px 8px 8px;
+  padding: 10px;
+
 }
 #menu li {
   display: inline;
-  padding: 25px;
+  padding: 18px;
 }
 
+
+body {
+    background-image: url('Logo.png');
+    background-repeat: no-repeat;
+    background-attachment: absolute;
+    background-size:30%;
+    z-index:10;
+    }
+
+
+
 #Logo{
-margin-top:175px;
-position: absolute;
 left:15%;
-right:25%;
+right: 10%;
+margin-top:200px;
+position: absolute;
+z-index:-1;
 }
 
 
@@ -51,9 +65,6 @@ a:hover
   font-size:50px;
   text-align:center;
   color:#558C89;
-
-
-
 }
 
 #Date{
@@ -78,7 +89,7 @@ a:hover
 p {
   font-family:Trebuchet MS;
   font-size:25px;
-  text-align:center;
+  text-align:justify;
   line-height: 150%;
   color: #000000;
   }
@@ -108,46 +119,38 @@ A.menubar:hover {color: #74AFAD;
 }
 
 
-
-
-
 h5{
   margin:0;
 }
 
 #intro {
-  padding-right:50px;
-  padding-left:50px;
-  padding-top:20px;
-  border-style: solid;
-  border-color:#558C89;
+  max-width: 50%;
+  width: auto;
+  height: auto;
   width:70%;
-  top:85%;
+  top:82%;
   font-size:35px;
-  text-align: center;
   /*background-color:#ECECEA;*/
   font-family:Palatino Linotype;
   color:#000000;
-  border-radius:60px;
+  /*border-radius:60px;*/
   position:absolute;
-  right:200px;
+  right:10%;
   line-height: 150%;
   margin-bottom:20px;
   border-width: 5px;
+  float:right;
 }
 
 
 #photo {
-  border-style:solid;
-  border-color:#000000;
-  float:left;
   width:300px;
   height:355px;
-  margin-right: 30px;
-  top: 32%;
-  text-align: center;
-  background-color:#74AFAD;
-  font-family:Palatino Linotype;
+  left: 10%;
+  top:82%;
+  position: absolute;
+  border-style: solid;
+  border-color:#558C89;
 
 }
 
