--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 #menu {
-  width: 920px;
-  height: 70px;
+  max-width: 80%;
+  width: auto;
+  height: auto;
   font-size: 20px;
   font-family: Trebuchet MS;
   font-weight: bold;
@@ -11,40 +12,46 @@
   text-align:center;
   position: absolute;
   right: 1%;
-  top: 5%;
+  top: 3%;
 }
 
 
 #menu ul {
   height: auto;
-  padding: 5px 8px 8px 8px;
+  padding: 10px;
+
 }
 #menu li {
   display: inline;
-  padding: 25px;
+  padding: 18px;
 }
 
 
+body {
+    background-image: url('Logo.png');
+    background-repeat: no-repeat;
+    background-attachment: absolute;
+    background-size:30%;
+    overflow: hidden;
+    }
+
+
 #icons {
- width: 600px;
-  height: 70px;
-  font-size: 20px;
-  font-family: Trebuchet MS;
-  font-weight: bold;
+  width: 40%;
   background-color: #558C89;
   border-radius: 10px;
   border-style: solid;
   border-color:#000000;
   text-align:center;
   position: absolute;
-  bottom: 1%;
-  left:28%;
+  bottom:5%;
+  left: 28%;
+  right:30%;
 }
 
 
 #icons ul {
-  height: auto;
-  padding: 12px 8px 8px 8px;
+  padding: 12px;
   margin: 2px;
 }
 #icons li {
@@ -66,7 +73,7 @@ a:hover
 
 #Heading{
   margin-top:175px;
-   margin-bottom:5px;
+  margin-bottom:5px;
   font-family:Palatino Linotype;
   font-size:50px;
   text-align:center;
@@ -85,7 +92,7 @@ a:hover
 
 #HeadingIndexPage{
   margin-top:300px;
-   margin-bottom:5px;
+  margin-bottom:5px;
   font-family:Palatino Linotype;
   font-size:50px;
   text-align:center;
@@ -100,11 +107,6 @@ p {
   line-height: 150%;
   }
 
-body {
-    background-image: url('Logo.png');
-    background-repeat: no-repeat;
-    background-attachment: absolute;
-    }
 
 .line_break{
   height:4px;
@@ -114,27 +116,6 @@ body {
   position:absolute;
 }
 
-#blogs{
-  padding-right:50px;
-  padding-left:50px;
-  border-style: solid;
-  border-radius:60px;
-  border-color:#000000;
-  position:relative;
-  width:70%;
-  right:15%;
-  left:11%;
-  top: 32%;
-  font-size: 35px;
-  text-align: center;
-list-style-position:inside;
-  background-color:#ECECEA;
-  font-family:Palatino Linotype;
-  }
-
-  #blogs ol{
-  text-align:center;
-  }
 
 A.menubar {color:#FFFFFF;
 }
@@ -142,24 +123,6 @@ A.menubar:hover {color: #74AFAD;
 }
 
 
-#thinking_style{
-  border-style: solid;
-  border-color:#74AFAD;
-  border-radius:60px;
-  border-width: 15px;
-  color:#000000;
-  width:40%;
-  position:relative;
-  left:15%;
-  text-align:left;
-  padding-top:30px;
-  padding-left:15%;
-  top: 32%;
-  font-size: 20px;
-  list-style-position:inside;
-  background-color:#FFFFFF;
-  font-family:Palatino Linotype;
-  }
 
   #title{
     text-align:center;
@@ -168,68 +131,10 @@ A.menubar:hover {color: #74AFAD;
     right:30%;
   }
 
-  #quote {
-  background: #558C89;
-  border-left: 20px solid #C0C0C0;
-  margin: 1em 5px;
-  padding: 0.1em 0.1px;
-  quotes: "\201C""\201D""\2018""\2019";
-  text-align: center;
-  font-size:30px;
-  color:#FFFFFF;
-}
-blockquote:before {
-  color: #C0C0C0;
-  content: open-quote;
-  font-size: 3em;
-  line-height: 0.1em;
-  margin-right: 0.10em;
-  vertical-align: -0.4em;
-}
-blockquote:after {
-  color: #C0C0C0;
-  content: close-quote;
-  font-size: 3em;
-  line-height: 0.1em;
-  margin-right: 0.10em;
-  vertical-align: -0.4em;
-}
 
 h5{
   margin:0;
 }
 
-#intro {
-  padding-right:50px;
-  padding-left:50px;
-  padding-top:20px;
-  border-style: solid;
-  border-color:#74AFAD;
-  width:70%;
-  top:35%;
-  font-size:35px;
-  text-align: center;
-  background-color:#ECECEA;
-  font-family:Palatino Linotype;
-  border-radius:60px;
-  position:absolute;
-  right:200px;
-  line-height: 150%;
-  margin-bottom:20px;
-}
 
 
-#photo {
-  border-style:solid;
-  border-color:#74AFAD;
-  float:left;
-  margin: 10px;
-  width:300px;
-  height:355px;
-  margin-right: 30px;
-  top: 32%;
-  text-align: center;
-  background-color:#ECECEA;
-  font-family:Palatino Linotype;
-
-}
